--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -17,6 +17,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 //  font-family: "Manrope", serif;
 
-body {
-  font-family: "Manrope";
-}
+@import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
+// font-family: "Prata", serif;
