--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,9 +2,8 @@
 @use "./components/index" as components;
 
 [class*="__container"] {
-  max-width: 1935px; // 1920px + 0 + 15px
+  max-width: 1920px;
   margin: 0 auto;
-  padding: 0 base.$padding-main-container 0 0;
 }
 
 body {
@@ -13,12 +12,18 @@ body {
   background-color: base.$light-blue;
 
   .wrap-admin-panel {
+    background-color: base.$secondary-color;
     display: flex;
-    background-color: base.$tertiary-color;
 
-    main {
+    .wrap-header-main {
       flex-grow: 1;
-      padding: 20px 20px;
+      background-color: base.$tertiary-color;
+
+      main.page {
+        padding: 30px 0 20px 20px;
+
+        padding-right: base.$padding-main-container;
+      }
     }
   }
 }
