🧱 Create mobile menu
🎨 Add styles for responsive.
📸 Add mobile menu icon.

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -50,4 +50,9 @@ $sidebar-item-active-bg: $color-active;
 
 $sidebar-border-color: $gold-color;
 
+// ############################ Sidebar ############################
+$mobile-menu-color: $sidebar-color;
+$mobile-menu-bg: $sidebar-bg;
+$mobile-menu-family: $sidebar-family;
+
 // ############################ END COMPONENTS ############################
