--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -14,6 +14,35 @@ aside.sidebar {
 
   border-right: 1px solid v.$sidebar-border-color;
 
+  &::-webkit-scrollbar {
+    width: 8px; // Ширина вертикального скролу
+    height: 8px; // Висота горизонтального скролу
+  }
+
+  // Стилізація доріжки (фон під скролом)
+  &::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+    border-radius: 4px;
+  }
+
+  // Стилізація повзунка (сам скрол)
+  &::-webkit-scrollbar-thumb {
+    background-color: #1d1d1d; // Колір повзунка
+    border-radius: 4px;
+    &:hover {
+      background-color: #555; // Колір при наведенні
+    }
+  }
+
+  // Стилізація кута, де горизонтальний і вертикальний скрол перетинаються
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+
+  /* Стилізація скролу для Firefox */
+  scrollbar-width: thin; /* Варіанти: auto, thin, none */
+  scrollbar-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.1); /* Повзунок і фон */
+
   .logo-box {
     text-align: center;
     padding-bottom: 30px;
