--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @use "./base/index" as base;
+@use "./pages/index" as pages;
 @use "./components/index" as components;
 @use "./responsive/index" as responsive;
 
