--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -1,3 +1,4 @@
 @forward "./sidebar-component-responsive";
 @forward "./header-component-responsive";
 @forward "./add-product-page-responsive";
+@forward "./product-list-page-responsive";
