--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,9 +22,21 @@ body {
       background-color: base.$tertiary-color;
 
       main.page {
-        padding: 30px 0 20px 20px;
-
+        padding: 30px 0 20px 60px;
         padding-right: base.$padding-main-container;
+        min-height: 100svh;
+      }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  body {
+    .wrap-admin-panel {
+      .wrap-header-main {
+        main.page {
+          padding: 30px 15px 20px 15px;
+        }
       }
     }
   }
