--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,11 @@ body {
         padding: 30px 0 20px 60px;
         padding-right: base.$padding-main-container;
         min-height: 100svh;
+
+        h2.page-title {
+          font-size: 25px;
+          margin-bottom: 30px;
+        }
       }
     }
   }
