🧱 Create Breadcrumbs functionality
🏗️ Add Breadcrumbs to all pages.
💄 Add styles.

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -75,4 +75,7 @@ $mobile-menu-color: $sidebar-color;
 $mobile-menu-bg: $sidebar-bg;
 $mobile-menu-family: $sidebar-family;
 
+// ############################ BreadCrumbs ############################
+$bread-crumbs-gap: 5px;
+
 // ############################ END COMPONENTS ############################
