--- a/src/styles/pages/_product-list.scss
+++ b/src/styles/pages/_product-list.scss
@@ -2,6 +2,8 @@
 
 section.products-list {
   display: flex;
+  flex-direction: column;
+  align-items: start;
 
   .empty-page {
     display: flex;
