🔨 Add Loader and Offline message
🔨 Add Loader and styles for it.
🔨 Add Offline message and styles for it.
📦️ Add "react-loader-spinner" package.
🔧 Disable "EDIT" button in cases when the form is not changed.

--- a/src/styles/pages/_edit-product.scss
+++ b/src/styles/pages/_edit-product.scss
@@ -209,6 +209,16 @@ section.edit-product {
     .buttons {
       display: flex;
       gap: 20px;
+
+      button[type="button"] {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+
+        .revert-imoji {
+          font-size: 20px;
+        }
+      }
     }
   }
 }
