🔨 Create pagination functionality

--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -3,3 +3,4 @@
 @forward "./add-product-page-responsive";
 @forward "./product-list-page-responsive";
 @forward "./edit-product-page-responsive";
+@forward "./pagination-component-responsive";
