🏗️  Create adding category and sub-category functionality
🏗️  Add new page "Add Category".
💄 Add styles and responsive.

--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -3,4 +3,5 @@
 @forward "./add-product-page-responsive";
 @forward "./product-list-page-responsive";
 @forward "./edit-product-page-responsive";
+@forward "./add-category-page-responsive";
 @forward "./pagination-component-responsive";
