🏗️ Create Category List page and possibility to remove category
📄 Add "Category List" page.
🏗️ Add Pagination.

--- a/src/styles/pages/_add-category.scss
+++ b/src/styles/pages/_add-category.scss
@@ -64,6 +64,7 @@ section.add-category {
 
         button.add-btn {
           align-self: self-start;
+          padding: 10px clamp(1.25rem, 1.125rem + 0.63vw, 1.875rem); // 17 - 30 to 13 - 20
         }
 
         p.error {
