--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -4,4 +4,5 @@
 @forward "./product-list-page-responsive";
 @forward "./edit-product-page-responsive";
 @forward "./add-category-page-responsive";
+@forward "./category-list-page-responsive";
 @forward "./pagination-component-responsive";
