🏗️ Create "Edit Category" page
💄 Add styles and responsive

--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -5,4 +5,5 @@
 @forward "./edit-product-page-responsive";
 @forward "./add-category-page-responsive";
 @forward "./category-list-page-responsive";
+@forward "./edit-category-page-responsive";
 @forward "./pagination-component-responsive";
