🏗️ Add Search, Filters, Sort

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -4,4 +4,6 @@
 @forward "./breadcrumbs";
 @forward "./loader";
 @forward "./network-status";
+@forward "./toolbar";
+@forward "./filters-product";
 @forward "./pagination";
