--- a/src/styles/pages/_product-list.scss
+++ b/src/styles/pages/_product-list.scss
@@ -13,6 +13,10 @@ section.products-list {
     margin: 0 auto;
   }
 
+  .toolbar-wrapper {
+    width: 100%;
+  }
+
   .table-box {
     padding: 20px;
     background-color: v.$secondary-color;
