--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -6,4 +6,5 @@
 @forward "./add-category-page-responsive";
 @forward "./category-list-page-responsive";
 @forward "./edit-category-page-responsive";
+@forward "./toolbar-component-responsive";
 @forward "./pagination-component-responsive";
