🏗️ Create Modal Window
🔧 Add to context values for controlling visibility of modal window.
🔧 Connect modal window to removing product/category.
💄 Add styles.
📱 Add responsive.

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -6,4 +6,5 @@
 @forward "./network-status";
 @forward "./toolbar";
 @forward "./filters-product";
+@forward "./modal-window";
 @forward "./pagination";
