--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -7,4 +7,5 @@
 @forward "./category-list-page-responsive";
 @forward "./edit-category-page-responsive";
 @forward "./toolbar-component-responsive";
+@forward "./modal-window-component-responsive";
 @forward "./pagination-component-responsive";
