--- a/src/styles/components/_filters-product.scss
+++ b/src/styles/components/_filters-product.scss
@@ -52,6 +52,19 @@ section.filter__menu {
       p {
         margin-bottom: 10px;
       }
+
+      .price__fields {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+        .price__field {
+          .price__input {
+            min-width: 50px;
+            width: 100px;
+          }
+        }
+      }
     }
 
     .filter__footer {
