Create Add images functionality
Add dnd-kit packages.
Add react-dropzone packages.
Add nanoid packages.
Comment old functionality.
Reskining of admin panel.

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -12,15 +12,21 @@ $font-tertiary: "Prata", serif;
 
 // #### COLORS ####
 
+// $primary-color: #ffffff;
+// $secondary-color: #2e2e48;
+// $tertiary-color: #424267;
+// $accent-color: #000000;
+
 $primary-color: #ffffff;
-$secondary-color: #2e2e48;
-$tertiary-color: #424267;
+$secondary-color: #37353e;
+$tertiary-color: #715a5a;
 $accent-color: #000000;
 
 // extra colors
 $dark-grey: #e1e1e1;
 $light-blue: #e3e7fc;
-$color-active: #475be8;
+// $color-active: #475be8;
+$color-active: #25242a;
 // $border-color: #adadad;
 $color-error: #e74c3c;
 $color-success: #00a625;
