Create Cloudinary Info Box on Dashboard
Add 'recharts' packages.
Add 'react-responsive' packages.
Add chart.
Get Cloudinary used data.
Add styles.
Add images.

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -84,4 +84,5 @@ $mobile-menu-family: $sidebar-family;
 // ############################ BreadCrumbs ############################
 $bread-crumbs-gap: 5px;
 
+$wrapper-box-radius: 20px;
 // ############################ END COMPONENTS ############################
