--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -9,3 +9,4 @@
 @forward "./toolbar-component-responsive";
 @forward "./modal-window-component-responsive";
 @forward "./pagination-component-responsive";
+@forward "./dashboard-page-responsive";
