--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -1,6 +1,10 @@
 @use "../base/variables" as v;
 
 section.dashboard {
+  section {
+    margin-bottom: 20px;
+  }
+
   section.cloudinary-box {
     width: 100%;
     padding: 20px;
@@ -58,6 +62,23 @@ section.dashboard {
           }
         }
       }
+    }
+  }
+
+  section.mongo-box {
+    width: 50%;
+    padding: 20px;
+    background-color: v.$secondary-color;
+    border-radius: v.$wrapper-box-radius;
+
+    h2.box-title {
+      text-decoration: underline;
+      margin-bottom: 20px;
+    }
+
+    .wrap-mongo-chart {
+      height: 300px;
+      width: 100%;
     }
   }
 }
