--- a/src/styles/responsive/_add-product-page-responsive.scss
+++ b/src/styles/responsive/_add-product-page-responsive.scss
@@ -7,20 +7,23 @@
         h2 {
         }
 
-        .upload-images-box {
-          label.image-label {
-            .delete-img {
-              img {
-              }
-            }
+        // start old code
 
-            img.photo {
-            }
+        // .upload-images-box {
+        //   label.image-label {
+        //     .delete-img {
+        //       img {
+        //       }
+        //     }
 
-            input[type="file"] {
-            }
-          }
-        }
+        //     img.photo {
+        //     }
+
+        //     input[type="file"] {
+        //     }
+        //   }
+        // }
+        // end old code
       }
 
       .form__product-name {
@@ -103,22 +106,78 @@
         h2 {
         }
 
-        .upload-images-box {
+        .draguble-upload-images-box {
+          // margin: 0 auto;
+          // display: flex; // треба бо картинки будуть звужуватися
+          // padding-bottom: 20px;
+          // padding-top: 20px;
+
+          // max-width: calc(100svw - 320px);
+          // overflow-x: auto;
+          // scroll-snap-type: x mandatory;
+          // gap: 20px;
+          margin: unset;
           max-width: calc(100svw - 30px);
 
-          label.image-label {
-            .delete-img {
-              img {
+          .wrap-images {
+            // display: flex;
+            // gap: 20px;
+
+            .image-box {
+              // position: relative;
+              // width: 150px;
+              // height: 170px;
+              // display: flex;
+              // align-items: center;
+              // justify-content: center;
+              // cursor: grab;
+
+              .remove-button {
+                // position: absolute;
+                // right: -6px;
+                // top: -6px;
+                // width: 25px;
+                // display: flex;
+                // align-items: center;
+                // justify-content: center;
+                // background-color: #d0d2d2;
+                // padding: 7px;
+                // border-radius: 50%;
+                // cursor: pointer;
+
+                img {
+                  // border: none;
+                  // aspect-ratio: 1/1;
+                }
               }
-            }
 
-            img.photo {
-            }
-
-            input[type="file"] {
+              img {
+                // width: 100%;
+                // height: 100%;
+                // object-fit: cover;
+              }
             }
           }
         }
+
+        // start old code
+        // .upload-images-box {
+        //   max-width: calc(100svw - 30px);
+
+        //   label.image-label {
+        //     .delete-img {
+        //       img {
+        //       }
+        //     }
+
+        //     img.photo {
+        //     }
+
+        //     input[type="file"] {
+        //     }
+        //   }
+        // }
+        // end old code
       }
 
       .form__product-name {
