--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -70,7 +70,7 @@ section.add-product {
 
             -webkit-touch-callout: none; /* 🚫 Save Image */
             // touch-action: none; /* ✅ drag працює на мобільному */
-            // touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
+            touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
 
             .remove-button {
               position: absolute;
