--- a/src/styles/responsive/_add-product-page-responsive.scss
+++ b/src/styles/responsive/_add-product-page-responsive.scss
@@ -107,54 +107,17 @@
         }
 
         .draguble-upload-images-box {
-          // margin: 0 auto;
-          // display: flex; // треба бо картинки будуть звужуватися
-          // padding-bottom: 20px;
-          // padding-top: 20px;
-
-          // max-width: calc(100svw - 320px);
-          // overflow-x: auto;
-          // scroll-snap-type: x mandatory;
-          // gap: 20px;
           margin: unset;
           max-width: calc(100svw - 30px);
 
           .wrap-images {
-            // display: flex;
-            // gap: 20px;
-
             .image-box {
-              // position: relative;
-              // width: 150px;
-              // height: 170px;
-              // display: flex;
-              // align-items: center;
-              // justify-content: center;
-              // cursor: grab;
-
               .remove-button {
-                // position: absolute;
-                // right: -6px;
-                // top: -6px;
-                // width: 25px;
-                // display: flex;
-                // align-items: center;
-                // justify-content: center;
-                // background-color: #d0d2d2;
-                // padding: 7px;
-                // border-radius: 50%;
-                // cursor: pointer;
-
                 img {
-                  // border: none;
-                  // aspect-ratio: 1/1;
                 }
               }
 
               img {
-                // width: 100%;
-                // height: 100%;
-                // object-fit: cover;
               }
             }
           }
@@ -258,24 +221,24 @@
         h2 {
         }
 
-        .upload-images-box {
-          label.image-label {
-            width: 80%;
-            min-width: 80%;
+        // .upload-images-box {
+        //   label.image-label {
+        //     width: 80%;
+        //     min-width: 80%;
 
-            .delete-img {
-              img {
-              }
-            }
+        //     .delete-img {
+        //       img {
+        //       }
+        //     }
 
-            img.photo {
-              min-width: 100%;
-            }
+        //     img.photo {
+        //       min-width: 100%;
+        //     }
 
-            input[type="file"] {
-            }
-          }
-        }
+        //     input[type="file"] {
+        //     }
+        //   }
+        // }
       }
 
       .form__product-name {
