--- a/src/styles/pages/_edit-product.scss
+++ b/src/styles/pages/_edit-product.scss
@@ -239,6 +239,27 @@ section.edit-product {
         margin-bottom: 20px;
       }
 
+      .form__isSizesAvailable-box {
+        margin-bottom: 30px;
+
+        label.isSizesAvailable {
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          input[type="checkbox"] {
+            min-width: auto;
+            width: 20px;
+            aspect-ratio: 1/1;
+          }
+
+          p {
+            font-size: 18px;
+          }
+        }
+      }
+
       .sizes-box {
         display: flex;
         flex-wrap: wrap;
@@ -264,6 +285,10 @@ section.edit-product {
 
     .form__bestseller-box {
       margin-bottom: 30px;
+
+      h2 {
+        margin-bottom: 20px;
+      }
 
       label.bestseller {
         cursor: pointer;
