Translate admin pannel

--- a/src/styles/responsive/_header-component-responsive.scss
+++ b/src/styles/responsive/_header-component-responsive.scss
@@ -79,7 +79,7 @@
               span {
                 font-size: 18px;
                 font-weight: 600;
-                text-transform: uppercase;
+                // text-transform: uppercase;
               }
 
               &.active {
