Try to fix mobile move photos

--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -20,6 +20,7 @@ section.add-product {
         scroll-snap-type: x mandatory;
         gap: 20px;
 
+        user-select: none; /* Firefox/Chrome/Edge */
         touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
 
         &::-webkit-scrollbar {
