--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -6,6 +6,7 @@ section.add-product {
   form.add-product__form {
     .form__upload-img {
       user-select: none; /* Firefox/Chrome/Edge */ // Допомогло трохи
+      -webkit-user-modify: read-only;
 
       h2 {
         margin-bottom: 20px;
@@ -24,6 +25,7 @@ section.add-product {
 
         touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
         user-select: none;
+        -webkit-user-modify: read-only;
 
         &::-webkit-scrollbar {
           width: 8px; // Ширина вертикального скролу
@@ -58,6 +60,7 @@ section.add-product {
           display: flex;
           gap: 20px;
           user-select: none; /* Firefox/Chrome/Edge */ //
+          -webkit-user-modify: read-only;
 
           .image-box {
             position: relative;
@@ -76,6 +79,7 @@ section.add-product {
             // touch-action: none; /* ✅ drag працює на мобільному */
             touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
             user-select: none;
+            -webkit-user-modify: read-only;
 
             .remove-button {
               position: absolute;
