Try to fix mobile move photos9

--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -10,6 +10,8 @@ section.add-product {
 
       h2 {
         margin-bottom: 20px;
+        user-select: none; /* Firefox/Chrome/Edge */ //
+        -webkit-user-modify: read-only;
       }
 
       .draguble-upload-images-box {
