Try to fix mobile move photos13

--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -63,6 +63,7 @@ section.add-product {
           gap: 20px;
           user-select: none; /* Firefox/Chrome/Edge */ //
           -webkit-user-modify: read-only;
+          touch-action: pan-x;
 
           .image-box {
             position: relative;
