Try to fix mobile move photos18

--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -72,6 +72,7 @@ section.add-product {
             align-items: center;
             justify-content: center;
             cursor: grab;
+            touch-action: pan-x;
 
             .remove-button {
               position: absolute;
