Try to fix mobile move photos19

--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -73,6 +73,7 @@ section.add-product {
             justify-content: center;
             cursor: grab;
             touch-action: pan-x;
+            user-select: none;
 
             .remove-button {
               position: absolute;
