--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -74,6 +74,7 @@ section.add-product {
             cursor: grab;
             touch-action: pan-x;
             user-select: none;
+            -webkit-touch-callout: none;
 
             .remove-button {
               position: absolute;
