--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -76,7 +76,7 @@ section.add-product {
             touch-action: pan-x;
             user-select: none;
             // -webkit-touch-callout: none;
-            -webkit-user-drag: none;
+            // -webkit-user-drag: none;
 
             .remove-button {
               position: absolute;
