--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -73,8 +73,8 @@ section.add-product {
             justify-content: center;
             cursor: grab;
 
-            touch-action: pan-x;
-            user-select: none;
+            // touch-action: pan-x;
+            // user-select: none;
             // -webkit-touch-callout: none;
             // -webkit-user-drag: none;
 
