--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -5,13 +5,11 @@ section.add-product {
 
   form.add-product__form {
     .form__upload-img {
-      user-select: none; /* Firefox/Chrome/Edge */ // Допомогло трохи
-      -webkit-user-modify: read-only;
+      // user-select: none; /* Firefox/Chrome/Edge */ // Допомогло трохи
 
       h2 {
         margin-bottom: 20px;
-        user-select: none; /* Firefox/Chrome/Edge */ //
-        -webkit-user-modify: read-only;
+        // user-select: none; /* Firefox/Chrome/Edge */ //
       }
 
       .draguble-upload-images-box {
@@ -26,8 +24,7 @@ section.add-product {
         gap: 20px;
 
         touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
-        user-select: none;
-        -webkit-user-modify: read-only;
+        // user-select: none;
 
         &::-webkit-scrollbar {
           width: 8px; // Ширина вертикального скролу
@@ -61,8 +58,8 @@ section.add-product {
         .wrap-images {
           display: flex;
           gap: 20px;
-          user-select: none; /* Firefox/Chrome/Edge */ //
-          touch-action: pan-x;
+          // user-select: none; /* Firefox/Chrome/Edge */ //
+          // touch-action: pan-x;
 
           .image-box {
             position: relative;
@@ -73,10 +70,10 @@ section.add-product {
             justify-content: center;
             cursor: grab;
 
-            // touch-action: pan-x;
-            // user-select: none;
-            // -webkit-touch-callout: none;
-            // -webkit-user-drag: none;
+            -webkit-user-drag: none; /* 🚫 забороняє перетягування зображення */
+            -webkit-touch-callout: none; /* 🚫 прибирає меню "зберегти" / "копіювати" */
+            user-select: none; /* 🚫 блокує виділення тексту */
+            // touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
 
             .remove-button {
               position: absolute;
