--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -77,6 +77,7 @@ section.add-product {
             // touch-action: pan-x; /* ✅ дозволяє горизонтальний скрол */
 
             touch-action: pan-x; /* дозволяє горизонтальний скрол */
+            -webkit-touch-callout: none;
 
             .remove-button {
               position: absolute;
