--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -70,7 +70,7 @@ section.add-product {
             justify-content: center;
             cursor: grab;
 
-            user-select: none; /* 🚫 блокує виділення тексту */
+            // user-select: none; /* 🚫 блокує виділення тексту */
             touch-action: pan-x; /* дозволяє горизонтальний скрол */
             -webkit-touch-callout: none;
 
