Try to fix mobile move photos32

--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -5,7 +5,7 @@ section.add-product {
 
   form.add-product__form {
     .form__upload-img {
-      user-select: none; /* Firefox/Chrome/Edge */ // Допомогло трохи
+      // user-select: none; /* Firefox/Chrome/Edge */ // Допомогло трохи
 
       h2 {
         margin-bottom: 20px;
