Add Users List page and change role functionality

--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -10,3 +10,4 @@
 @forward "./modal-window-component-responsive";
 @forward "./pagination-component-responsive";
 @forward "./dashboard-page-responsive";
+@forward "./users-list-page-responsive";
