Formatted description text

--- a/src/styles/pages/_add-product.scss
+++ b/src/styles/pages/_add-product.scss
@@ -204,6 +204,9 @@ section.add-product {
 
       textarea.product-area {
         width: calc(700px / 1225px * 100%);
+
+        white-space: pre-wrap; // зберігає переноси рядків
+        word-break: break-word; // розбиває довгі слова, щоб не ламати верстку
       }
     }
 
